--- a/index.html
+++ b/index.html
@@ -7,12 +7,8 @@
   <title>CARAVAN</title>
 </head>
 <body>
-	<div class="header">
-		<div class="header-top">
-		</div>
-		<div class="header-bottom">
-		</div>
-	</div>
+	<header>
+	</header><!-- /header -->
 	<div class="main-visual">
 		<div class="main-visual-content">
 		</div>
@@ -23,7 +19,7 @@
 		<div class="sidebar">
 		</div>
 	</div>
-	<div class="footer">
-	</div>
+	<footer>
+	</footer>
 </body>
 </html>
