--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8" />
-  <!-- CSSファイルの読み込み -->
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <script src="https://kit.fontawesome.com/8f6eebf602.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="style.css">
   <title>CARAVAN</title>
