--- a/ex9.html
+++ b/ex9.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<link rel="stylesheet" href="ex9.css">
 	<title>exercise9</title>
 </head>
